--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Alexandr Smagin",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^7.15.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "nodemon": "^2.0.6"
   },
   "dependencies": {
